--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "crypto-js": "^4.2.0",
+    "firebase": "^12.6.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
